--- a/3D Projection Mapping.html
+++ b/3D Projection Mapping.html
@@ -432,7 +432,10 @@
 											<span class="text_effect text_effect_left">Projection Mapping</span>
 										</h2>
 										<p class="mb-50" data-aos="fade-up" data-aos-delay="200">
-											3D Projection Mapping Companies all over the world do projection mapping also known by the names video mapping and spatial augmented reality which is basically a projection technology used to turn objects which are generally irregular in shape into a display surface for video projection. 3D Projection Mapping Companies are widely known for transforming anything into a screen with the art of Projection Mapping.
+											We will make you think that this the best time to be alive. 3D Projection Mapping technology, also known by the names video mapping and spatial augmented reality which is basically a projection technology used to turn objects which are generally irregular in shape into a display surface for video projection. We are widely known for transforming anything into a screen with the our rich art of Projection Mapping.
+										</p>
+										<p class="mb-50" data-aos="fade-up" data-aos-delay="200">
+											Hash Media has been on everyone's lips in whichever ocassional we showcased our action. We have been making spectular visuals perfectly determining the individual needs, customizing each and every bit on your words. Your need is our deed.
 										</p>
 										
 									</div>
@@ -476,13 +479,13 @@
 											
 										</h2>
 										<p class="mb-0" data-aos="fade-up" data-aos-delay="200">
-											3D Projection Mapping Companies generally create 3D Projection Mapping Events that after conclusion leaves the audience cheering for more. After the object to be projected is chosen, software is used to map the corners of the video to the surfaces. One may even choose to map the entire scene in 3D and try to project and mask the picture back onto its framework. The next step called “masking” which is using opacity templates to actually “mask” the exact shapes and positions of the different elements of the space of projection.
+											We create 3D Projection Mapping Events that after conclusion leaves the audience cheering for more. After you show us the object to be projected, our software is used to map the corners of the video to the surfaces. Then we perform step called “masking” which is using opacity templates to actually “mask” the exact shapes and positions of the different elements of the space of projection. We are excited to work with you; we are just a coffee away!
 										</p>
 										<div class="row">
 											<div class="col-lg-6 col-md-6 col-sm-12">
 												<div class="child_feature" data-aos="fade-up" data-aos-delay="400">
 													<div class="item_icon icon_purple" data-background="assets/images/shapes/shape_17.png" style="background-image: url(_assets/images/shapes/shape_17.png_);">
-														<i class="icon-verified-avatar"></i>
+														<i class="icon-setup"></i>
 														<span class="icon_deco icon_deco_1">
 															<img src="assets/images/shapes/shape_3.png" alt="shape_not_found">
 														</span>
@@ -498,14 +501,14 @@
 													</div>
 													<h3 class="item_title">Theatrical</h3>
 													<p class="mb-0">
-														often interactive where projections are adjusted beforehand and scenes are “cued” on demand in coordination with onstage performance.
+														Interactive Projections are adjusted beforehand and scenes are “cued” on demand in coordination with onstage performance.
 													</p>
 												</div>
 											</div>
 
 											<div class="col-lg-6 col-md-6 col-sm-12">
 												<div class="child_feature" data-aos="fade-up" data-aos-delay="400">
-													<div class="item_icon icon_purple" data-background="assets/images/shapes/shape_17.png" style="background-image: url(_assets/images/shapes/shape_17.png_);">
+													<div class="item_icon icon_orange" data-background="assets/images/shapes/shape_17.png" style="background-image: url(_assets/images/shapes/shape_17.png_);">
 														<i class="icon-verified-avatar"></i>
 														<span class="icon_deco icon_deco_1">
 															<img src="assets/images/shapes/shape_3.png" alt="shape_not_found">
@@ -522,7 +525,7 @@
 													</div>
 													<h3 class="item_title">Video Jockeying</h3>
 													<p class="mb-0">
-														used where live 3D Projection Mapping events are augmented by projections that are completely dynamic, and usually consist of pre-programmed videos which is controlled live.
+														Used where live 3D Projection Mapping events are augmented by projections that are completely dynamic, and usually consist of pre-programmed videos which is controlled live.
 													</p>
 												</div>
 											</div>
@@ -546,7 +549,7 @@
 													</div>
 													<h3 class="item_title">Video</h3>
 													<p class="mb-0">
-														not interactive where a generally long segmented show plays from the beginning to the end as a single video.
+														Non-interactive projection where a generally long segmented show plays from the beginning to the end as a single video.
 													</p>
 												</div>
 											</div>
@@ -570,7 +573,7 @@
 													</div>
 													<h3 class="item_title">Static</h3>
 													<p class="mb-0">
-														Programming is used for interacting with the viewers and environment through setting up a display.
+														Static Programming is used for interacting with the viewers and environment through setting up a display.
 													</p>
 												</div>
 											</div>
@@ -598,7 +601,7 @@
 				<section class="feature_section sec_ptb_345 bg_gradient_blue_2 deco_wrap text-center clearfix">
 					<div class="container">
 						<div class="section_title text-white mb-50 text_effect_wrap">
-							<h2 class="title_text mb-0"><span class="text_effect text_effect_bottom">Our Best Features</span></h2>
+							<h2 class="title_text mb-0"><span class="text_effect text_effect_bottom">What Set Us Apart?</span></h2>
 						</div>
 
 						<div class="row">
@@ -607,9 +610,9 @@
 									<div class="item_icon icon_bg_lightblue">
 										<i class="icon-shield"></i>
 									</div>
-									<h3 class="item_title">Playing surface mapping</h3>
+									<h3 class="item_title">Content-driven Approach</h3>
 									<p class="mb-0">
-										Whether it’s an ice rink, basketball court, baseball diamond, football field or soccer pitch, playing surface projection mapping is a great way to engage your fans and give them one more reason to get off the couch and into the seats!
+										Whether it’s an monument, musuem, housing apartment, content is a great way to engage your fans and give them one more reason to mesmerize the moment! We priortize content quality and resolution quality.
 									</p>
 								</div>
 							</div>
@@ -621,7 +624,7 @@
 									</div>
 									<h3 class="item_title">Warping <br>& blending</h3>
 									<p class="mb-0">
-										Whether you’re projecting on a building, landmark, 3D object, dome, curved surface or a simple flat screen, Christie’s warping and edge blending tools ensure the images look perfectly aligned and seamless.
+										Whether you’re projecting on a building, landmark, 3D object, dome, curved surface or a simple flat screen, Our warping and edge blending tools ensure the images look perfectly aligned and seamless.
 									</p>
 								</div>
 							</div>
