--- a/Mobile App Development.html
+++ b/Mobile App Development.html
@@ -349,7 +349,7 @@
                     </span>
                   </h1>
                   <p class="mb-50" data-aos="fade-up" data-aos-delay="200">
-                    The changing technology scenarios, on-demand customer requirements and sharp competition have taken mobile application development to new heights. It is not just about creating mobile applications, but developing perfect ones on the latest technology platforms available in the industry. At Hash Media build compelling applications on different mobile platforms to serve the diverse needs of our global end users.
+                    Developing an application can fruitfully connect you with customers on the go. Because a mobile stays with the audience, where they go. So, it is a mobile marketing channel as well which promotes itself everywhere.
                   </p>
                   <div
                     class="btns_group ul_li"
@@ -427,7 +427,7 @@
                   </h2>
                   <p class="mb-30" data-aos="fade-up" data-aos-delay="200">
                     Android has overtaken iPhone and Android application development market is growing at a rapid pace. If you are looking for outstanding apps for yourself or your clients, then come to us. 
-                    We will deliver them in a cost-effective manner so that you’re your apps fetch more return on investment then you has previously imagined. It is not a big talk, but a promise.
+                    We will deliver them in a cost-effective manner so that you’re your apps fetch more return on investment then you has previously imagined. It is not a big talk, but a <strong class="text_orange">promise.</strong>
                   </p>
                   
                 </div>
@@ -464,7 +464,7 @@
                       </div>
                       <h3 class="item_title">Games Application</h3>
                       <p class="mb-0">
-                        At Hash Media we ensure that you get world class games for your Android phone. It is not a false promise but a truth: this confidence stems from our rich experience in Android apps development domain and unshakeable faith in technical.
+                        At Hash Media we ensure that you get world class games for your Android phone. It is not a false promise but a truth: this confidence stems from our rich experience in Android apps development domain and unshakeable faith in technical prospects.
                       </p>
                     </div>
                   </div>
@@ -480,7 +480,7 @@
                       </div>
                       <h3 class="item_title">Google Glasses</h3>
                       <p class="mb-0">
-                        Google glass apps development is the rising star in the realm of technology today. As the feasibility of the product has increased in the market, Google Glass Applications Development has picked up speed.Google Glasses applications development.
+                        Google glass app development is the rising star in the realm of technology today. As the feasibility of the product has increased in the market, Google Glass Application Development has picked up pace. With us, get ready for a better tomorrow.
                       </p>
                     </div>
                   </div>
@@ -496,7 +496,7 @@
                       </div>
                       <h3 class="item_title">Android wear</h3>
                       <p class="mb-0">
-                        Android Wear organizes your information, suggests what you need, and shows it to you before you even ask. Get messages from your friends, meeting notifications, and weather updates at a glance.Android Wear connects your phone to your wrist.
+                        Android Wear organizes your information, suggests what you need, and shows it to you before you even ask. Get messages from your friends, meeting notifications, and weather updates at a glance. Keep your app as close as your wrist.
                       </p>
                     </div>
                   </div>
@@ -571,18 +571,18 @@
                       </span>
                     </h2>
                     <p class="mb-30" data-aos="fade-up" data-aos-delay="200">
-                      iOS or iPhone operating system provides an intuitive and elegant interface for a magnificent end-user experience as you interact with iPhone apps on your iPhone.At Hash Media we have kept up the pace with iPhone evolution and continue to serve our clients with scintillating mobile applications. We continuously learn and absorb latest advancements made on iPhone front to pass on the rich benefits to our clients.
+                      iOS or iPhone operating system provides an intuitive and elegant interface for a magnificent end-user experience as you interact with iPhone apps on your iPhone. At Hash Media we have kept up the pace with iPhone evolution and continue to serve our clients with scintillating mobile applications. We continuously learn and absorb latest advancements made on iPhone front to pass on the rich benefits to our clients.
                     </p>
                     
-                    <h2 class="title_text mb-30 c_slide_in">
+                    <h3 class="title_text mb-30 c_slide_in">
                       <span class="c_slide_in_wrap1">
                         <span class="c_slide_in_wrap2">
-                          <span class="c_slide_in_wrap3"
-                            >Macbook</span
-                          >
+                          <span class="c_slide_in_wrap3">
+                            Key Differences
+                          </span>
                         </span>
                       </span>
-                    </h2>
+                    </h3>
                     <p class="mb-30" data-aos="fade-up" data-aos-delay="200">
                       We implement best development practices and combine it with our extensive experience in this field to give you applications that with following features:</p>
                       <ul>
@@ -674,21 +674,19 @@
                   <h3 class="sub_title mb-15 c_slide_in_wrap1">
                     <span class="c_slide_in_wrap2">
                       <span class="c_slide_in_wrap3">
-                        Download app
+                        Our Support Doesn't End At Development
                       </span>
                     </span>
                   </h3>
                   <h2 class="title_text mb-30 c_slide_in_wrap1">
                     <span class="c_slide_in_wrap2">
                       <span class="c_slide_in_wrap3">
-                        Its suitable to all decvices and screens
+                        We deploy your app on the leading app stores for you.
                       </span>
                     </span>
                   </h2>
                   <p class="mb-30" data-aos="fade-up" data-aos-delay="100">
-                    Why I say old chap that is, spiffing off his nut cor blimey
-                    guvnords geeza bloke knees up bobby, sloshed arse William
-                    cack Richard. Bloke fanny around chesed of bum
+                    We'll take care of your app store deployments and update roll out publishments while you sit back and relax; saving your time & enabling us serve you better.
                   </p>
                   <div
                     class="btns_group ul_li"
@@ -761,7 +759,7 @@
               <h3 class="sub_title mb-15 c_slide_in_wrap1">
                 <span class="c_slide_in_wrap2">
                   <span class="c_slide_in_wrap3">
-                    Apps Screen
+                    UI/UX
                   </span>
                 </span>
               </h3>
