--- a/Version Update.html
+++ b/Version Update.html
@@ -493,10 +493,10 @@
 
                                     <div class="col-lg-6 col-md-6 col-sm-12">
                                         <div class="child_feature" data-aos="fade-up" data-aos-delay="400">
-                                            <div class="item_icon icon_purple"
+                                            <div class="item_icon icon_orange"
                                                  data-background="assets/images/shapes/shape_17.png"
                                                  style="background-image: url(_assets/images/shapes/shape_17.png_);">
-                                                <i class="icon-verified-avatar"></i>
+                                                <i class="icon-setup"></i>
                                                 <span class="icon_deco icon_deco_1">
 															<img src="assets/images/shapes/shape_3.png"
                                                                  alt="shape_not_found">
@@ -571,9 +571,7 @@
             <div class="container">
                 <div class="section_title text-white mb-50 text_effect_wrap">
                     <h2 class="title_text mb-0"><span class="text_effect text_effect_bottom">Version Update To The Rescue</span>
-                    </h2>
-                    <h2 class="title_text mb-0"><span
-                            class="text_effect text_effect_bottom">Why choose version update?</span></h2>
+                    </h2>        
                 </div>
 
                 <div class="row">
@@ -585,7 +583,7 @@
                             <h3 class="item_title">One for All</h3>
                             <p class="mb-0 text-justify">
                                 Eliminate Complexity - one feed to fetch all required data, no matter the number of
-                                vendors,products or releases.
+                                vendors, products or releases.
                             </p>
                         </div>
                     </div>
@@ -597,7 +595,7 @@
                             </div>
                             <h3 class="item_title">No More Delays</h3>
                             <p class="mb-0 text-justify">
-                                Our process captures data from feeds, emails, websites of software vendors daily.
+                                Our process captures all data from feeds, emails, websites of software vendors daily.
                             </p>
                         </div>
                     </div>
@@ -679,7 +677,7 @@
         <section id="testimonial_section" class="testimonial_section deco_wrap bg_gray sec_ptb_345 pt-0 clearfix">
             <div class="container">
                 <div class="section_title text-center mb-80 text_effect_wrap">
-                    <h3 class="sub_title mb-15"><span class="text_effect text_effect_bottom">Testimonials</span></h3>
+                    <h3 class="sub_title mb-15"><span class="text_effect text_effect_bottom">Clients Love Us!</span></h3>
                     <h2 class="title_text mb-0"><span class="text_effect text_effect_bottom">Love from Clients</span>
                     </h2>
                 </div>
