--- a/About us.html
+++ b/About us.html
@@ -400,7 +400,7 @@
 										<span class="serial_number">01</span>
 										<h3 class="item_title">Our Company</h3>
 										<p class="mb-0">
-											Founded in 2010, Hash Media has been creating attention-grabbing corporate communication productions for local companies, international corporations and public service clients. Since then, we have expanded and diversified.
+											A seed planted in 2010, has grown a mile high the from the roots, Hash Media has always been creating history in corporate productions, international corporations to public service clients. This is result of stems from our constant drive to stay ahead of current trends & technology.
 										</p>
 									</div>
 								</div>
@@ -418,9 +418,9 @@
 								<div class="col-lg-6 col-md-6 col-sm-7">
 									<div class="item_content">
 										<span class="serial_number">02</span>
-										<h3 class="item_title">Our Success Stems From Our Constant Drive To Stay Ahead Of Current Trends & Technology.</h3>
+										<h3 class="item_title">Experts on Board</h3>
 										<p class="mb-0">
-											The team's combined experience across all platforms old & new, from Theatre to Augmented Reality, has set us far apart from others. Our portfolio of dynamic productions shows how we effectively integrate an eclectic mix of media to create uniquely mind-blowing experiences.
+											Experience & Expertise of our devs in new cutting-edge technologies is what sets us far apart from others. Our portfolio of dynamic productions shows how we effectively integrate an eclectic mix of media to create uniquely mind-blowing experiences.
 										</p>
 									</div>
 								</div>
@@ -431,19 +431,21 @@
 							<div class="row align-items-center justify-content-lg-between justify-content-md-between justify-content-sm-center">
 								<div class="col-lg-5 col-md-5 col-sm-7 order-last">
 									<div class="item_image">
-										<img src="assets/images/process/img_3.png=========" alt="image_not_found">
+										<img src="assets/images/process/img_3.png" alt="image_not_found">
 									</div>
 								</div>
 
 								<div class="col-lg-6 col-md-6 col-sm-7">
 									<div class="item_content">
 										<span class="serial_number">03</span>
-										<h3 class="item_title">News & Press</h3>
+										<h3 class="item_title">Our Mission</h3>
+										<h3 class="item_title">A fact worth a thousand words</h3>
 										<p class="mb-0">
+											Our Roadmap starts with our mission, which is enduring. It declares our purpose as a company and serves as the standard against which we weigh our actions and decisions.
 											<ul>
-												<li>Our Founder Mr. Harshit Lalpura got Interviewed by Allizwell.com </li>
-												<li>Hash Media represented its products in Demo Day at eChai</li>
-												<li>Hash Media is going to represent at Vibrant Gujarat 2015 for B2G MEETING at Mahatama Mandir, Gandhinagar.</li>
+												<li>To refresh the world.</li>
+												<li>To inspire moments of optimism and happiness.</li>
+												<li>To create value and make a difference.</li>
 											</ul>
 										</p>
 									</div>
@@ -461,10 +463,15 @@
 
 								<div class="col-lg-6 col-md-6 col-sm-7">
 									<div class="item_content">
-										<span class="serial_number">04</span>
-										<h3 class="item_title">Displays dolor amet consectetur dipiscing more</h3>
+										<span class="serial_number">04</span>										
+										<h3 class="item_title">News & Press</h3>
 										<p class="mb-0">
-											Our success stems from our constant drive to stay ahead of current trends & technology, speed, flexibility, and our priority of sustaining solid customer relationships.With an unquenchable thirst for the refinement of our services, Hash Media seeks nothing less than to redefine the world of media and entertainment.
+											<ul>
+												<li>Our Founder Mr. Harshit Lalpura got Interviewed by Allizwell.com </li>
+												<li>Hash Media represented its products in Demo Day at eChai</li>
+												<li>Hash Media is going to represent at Vibrant Gujarat 2015 for B2G MEETING at Mahatama Mandir, Gandhinagar.</li>
+												<li>Hash Media completed over 50+ institutional talks & workshops.</li>
+											</ul>
 										</p>
 									</div>
 								</div>
@@ -481,16 +488,10 @@
 
 								<div class="col-lg-6 col-md-6 col-sm-7">
 									<div class="item_content">
-										<span class="serial_number">05</span>
-										<h3 class="item_title">Our Mission</h3>
-										<h3 class="item_title">A fact worth a thousand words</h3>
+										<span class="serial_number">05</span>										
+										<h3 class="item_title">Our Success Stems From Our Constant Drive To Stay Ahead Of Current Trends & Technology.</h3>
 										<p class="mb-0">
-											Our Roadmap starts with our mission, which is enduring. It declares our purpose as a company and serves as the standard against which we weigh our actions and decisions.
-											<ul>
-												<li>To refresh the world.</li>
-												<li>To inspire moments of optimism and happiness.</li>
-												<li>To create value and make a difference.</li>
-											</ul>
+											Our success stems from our constant drive to stay ahead of current trends & technology, speed, flexibility, and our priority of sustaining solid customer relationships.With an unquenchable thirst for the refinement of our services, Hash Media seeks nothing less than to redefine the world of media and entertainment.
 										</p>
 									</div>
 								</div>
@@ -517,7 +518,7 @@
 								<div class="section_title text-center mb-50">
 									<h2 class="title_text mb-0 text_effect_wrap">
 										<span class="text_effect text_effect_bottom">Provide services to your customers from all</span>
-										<span class="text_effect text_effect_bottom">around the Universe</span>
+										<span class="text_effect text_effect_bottom">across the Globe</span>
 									</h2>
 								</div>
 							</div>
@@ -575,7 +576,7 @@
 					<div class="col-xl-6 col-lg-8 col-md-8 offset-md-2 p-sm-0 offset-xl-3 col-12">
 						<div class="section_title text-center increase_size mb-80 text_effect_wrap">
 							<h3 class="sub_title mb-15"><span class="text_effect text_effect_bottom">Our Team</span></h3>
-							<h2 class="title_text mb-0"><span class="text_effect text_effect_bottom">Dedicated Team Member</span></h2>
+							<h2 class="title_text mb-0"><span class="text_effect text_effect_bottom">Dedicated Team Members</span></h2>
 						</div>
 					</div>
 					</div>
@@ -623,8 +624,62 @@
 					</section>
 				<!-- pricing_section - end
 				================================================== -->
-<br>
-<br>
+<br><br>
+<!-- seo_section - start
+				================================================== -->
+				<section id="seo_section" class="seo_section sec_ptb_120 bg_gradient_blue deco_wrap clearfix">
+					<div class="container text-center">
+						<div class="row mb-50 justify-content-center">
+							<div class="col-lg-8 col-md-8 col-sm-10">
+								<div class="section_title text-white text_effect_wrap">
+									<h2 class="title_text mb-30">
+										<span class="text_effect text_effect_bottom">Let Us Have A Coffee <strong class="text_orange">Together!</strong></span>
+									</h2>
+									<p class="mb-0" data-aos="fade-up" data-aos-delay="100">
+										Let Us Have A Chat So We Can Understand Your Needs Better.
+									</p>
+								</div>
+							</div>
+						</div>
+
+						<div class="form_wrap ul_li" data-aos="fade-up" data-aos-delay="300">
+							<ul class="clearfix">
+								<li>
+									<div class="form_item">
+										<input type="text" name="name" placeholder="Name">
+									</div>
+								</li>
+								<li>
+									<div class="form_item">
+										<input type="email" name="email" placeholder="email">
+									</div>
+								</li>
+								<li>
+									<button type="submit" class="btn bg_gradient_orange border-0">Register</button>
+								</li>
+							</ul>
+						</div>
+					</div>
+
+					<div class="deco_image glob_image_1" data-aos="zoom-out" data-aos-delay="100">
+						<img src="assets/images/shapes/shape_50.png" alt="image_not_found">
+					</div>
+					<div class="deco_image shape_1" data-aos="fade-up" data-aos-delay="300">
+						<img src="assets/images/shapes/shape_53.png" alt="image_not_found">
+					</div>
+					<div class="deco_image shape_2" data-aos="fade-up" data-aos-delay="500">
+						<img src="assets/images/shapes/shape_54.png" alt="image_not_found" data-parallax='{"y" : 40, "scale" : 0.8}'>
+					</div>
+					<div class="deco_image shape_3" data-aos="fade-up" data-aos-delay="400">
+						<img src="assets/images/shapes/shape_54.png" alt="image_not_found" data-parallax='{"y" : 60, "scale" : 0.8}'>
+					</div>
+					<div class="deco_image rocket_image" data-aos="fade-up" data-aos-delay="500">
+						<img src="assets/images/shapes/img_9.png" alt="image_not_found">
+					</div>
+				</section>
+				<!-- seo_section - end
+				================================================== -->
+<br><br>
 
 
 				<!-- testimonial_section - start
